manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-external
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: ${UPSTREAM}
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET"
    nginx.ingress.kubernetes.io/server-snippet: |
        more_set_headers "WWW-Authenticate: Bearer realm=\"https://${FQDN}/artifactory/api/docker/null/v2/token\",service=\"${FQDN}\"";

spec:
  rules:
  - host: ${FQDN}
    http:
      paths:
      - backend:
          service:
            name: external
            port:
              number: 443
        pathType: Exact
        path: /v2/
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-external-auth
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: ${UPSTREAM}
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"

spec:
  rules:
  - host: ${FQDN}
    http:
      paths:
      - backend:
          service:
            name: external
            port:
              number: 443
        pathType: Exact
        path: /artifactory/api/docker/null/v2/token
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-external-head
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: ${UPSTREAM}
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /v2/${BASE}/$1/manifests/$3
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, HEAD"
spec:
  rules:
  - host: ${FQDN}
    http:
      paths:
      - backend:
          service:
            name: external
            port:
              number: 443
        pathType: Prefix
        path: /v2/(.*)/manifests(/|$)(.*)
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-external-get-blob
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: ${UPSTREAM}
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /v2/${BASE}/$1/blobs/$3
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET"
spec:
  rules:
  - host: ${FQDN}
    http:
      paths:
      - backend:
          service:
            name: external
            port:
              number: 443
        pathType: Prefix
        path: /v2/(.*)/blobs(/|$)(.*)
---
